--- a/index.html
+++ b/index.html
@@ -216,3 +216,60 @@
               
             </div>
       
+ <!-----Bottom p-->
+
+ <div class="bottomP">
+
+  <div class="P_child">
+    <img src="https://assets.loseit.com/website/home/Footer_WhiteKnockOutLogo.svg" alt="">
+  
+
+    <table class="p_child1">
+      <tbody>
+        <tr>
+          <th>Member Resources</th>
+          <th>Connect with Us</th>
+          <th>Our Team</th>
+        </tr>
+        <td>
+          <p>How It Works</p>
+        </td>
+        <td>
+          <p>Press & Media Kit</p>
+        </td>
+        <td>
+          <p>About Us</p>
+        </td>
+
+        <tr>
+          <td><p>Premium</p></td>
+          <td><p>Contact Us</p></td>
+          <td><p>Careers</p></td>
+        </tr>
+
+        <tr>
+          <td><p>Lose lt! Blog</p></td>
+          <td><p>Partners & API</p></td>
+          <td><p>Diversity</p></td>
+        </tr>
+
+        <tr>
+          <td><p>Help center </p></td>
+          <td><p>Share Your Story</p></td>
+        </tr>
+      </tbody>
+    </table>
+
+  </div>
+  <div class="buttom_last">
+      <img src="./2.png" alt="">
+      <p>Copyright 2008-2021 FilNOW,INC,All Rights Reserved
+      </p>
+
+      <span>Privacy | Terms of Service</span>
+
+  </div>
+
+</div>
+</body>
+</html>
