--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
             </div>
             
-            <button>Share Your Story</button>
+            <button onclick="window.location.href = './page2.html';">Share Your Story</button>
 
         </div>
 
