--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
             </div>
             
             <button onclick="window.location.href = './page2.html';">Share Your Story</button>
+            <h1>----------- Click here form 2nd Page----------></h1>
 
         </div>
 
